--- a/public/views/create.html
+++ b/public/views/create.html
@@ -3,7 +3,7 @@
         <label for="title" class="col-sm-2 control-label">Name</label>
 
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="title" placeholder="Write todo.." ng-model="todo.title">
+            <input type="text" class="form-control" id="title" placeholder="Write todo.." ng-model="todo.name">
         </div>
     </div>
     <div class="form-group">
